@@ -12,7 +12,7 @@ class SchedulerCommandLineProcessor : public balancedbanana::commandLineInterfac
 {
     public:
 
-        virtual std::shared_ptr<Task> process(int argc, char** argv);
+        virtual int process(int argc, char** argv, const std::shared_ptr<Task>& task);
 
     private:
 
