@@ -8,35 +8,9 @@ namespace balancedbanana
 namespace commandLineInterface
 {
 
-std::shared_ptr<Task> SchedulerCommandLineProcessor::process(int argc, char** argv)
+int SchedulerCommandLineProcessor::process(int argc, char** argv, const std::shared_ptr<Task>& task)
 {
-    std::shared_ptr<Task> task = std::make_shared<Task>();
-
-    // extract potential job command from arguments
-
-    for (int arg = 0; arg < argc; ++arg)
-    {
-        if (strcmp(argv[arg], "--command") == 0 || strcmp(argv[arg], "-c") == 0)
-        {
-            // Job Command must be marked by --command or -c
-            // everything after --command or -c is treated as the Job Command
-
-            std::stringstream job;
-            for (int jobArg = arg + 1; jobArg < argc; ++jobArg)
-            {
-                job << argv[arg];
-            }
-            std::string jobCommand = job.str();
-
-            task->setTaskCommand(jobCommand);
-
-            argc = arg;
-
-            break;
-        }
-    }
-    
-    CLI::App app;
+    CLI::App app{"Scheduler App"};
 
     // serverstart command
 
@@ -48,14 +22,14 @@ std::shared_ptr<Task> SchedulerCommandLineProcessor::process(int argc, char** ar
     app.add_option("--serverport,-sp", serverPort, "Server Port");
     app.add_option("--webapi-port,-wp", webAPIPort, "web API Port");
 
-    try { (app).parse((argc), (argv)); } catch(const CLI::ParseError &e) { return NULL; }
+    CLI11_PARSE(app, argc, argv);
 
     task->setServerIP(ipAddress);
     task->setServerPort(serverPort);
     task->setWebAPIIP(webAPIAddress);
     task->setWebAPIPort(webAPIPort);
 
-    return task;
+    return 0;
 }
 
 } // namespace commandLineInterface
